[gd_scene load_steps=5 format=3 uid="uid://k7fwcvxhw8k7"]

[ext_resource type="Script" path="res://Player.gd" id="1_6l8ii"]
[ext_resource type="Texture2D" uid="uid://cw7xdshcbqam1" path="res://char.png" id="2_kyfad"]
[ext_resource type="Script" path="res://BlockPlacing.gd" id="3_6pf5h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_as157"]
radius = 20.0
height = 60.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6l8ii")
MAX_JUMP = 11000
jump_ended_early_gravity_modifier = 15
max_fall_speed = 40000
metadata/_edit_group_ = true

[node name="Char" type="Sprite2D" parent="."]
texture = ExtResource("2_kyfad")

[node name="Camera2d" type="Camera2D" parent="."]
current = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_as157")
metadata/_edit_group_ = true

[node name="ApexTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BlockPlacing" type="Node2D" parent="."]
script = ExtResource("3_6pf5h")
